--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,4 @@
+
 group 'com.polidea.flutter_ble_lib'
 version '2.6.0'
 
@@ -24,6 +25,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'idea'
 
 android {
+    namespace = "com.polidea.flutter_ble_lib"
     compileSdkVersion 30
 
     defaultConfig {
